--- a/Deployment.yml
+++ b/Deployment.yml
@@ -8,7 +8,7 @@ spec:
   selector:
     matchLabels:
       app: ordersapi
-  replicas: 2
+  replicas: 1
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -21,20 +21,33 @@ spec:
     spec:
       containers:
       - name: ordersapi
-        image: iamnilanjan3/ecom-users-api:latest
+        image: iamnilanjan3/ecom-orders-api:10
         imagePullPolicy: IfNotPresent
         resources:
           limits:
-            memory: "1024Mi"
-            cpu: "1000m"
+            memory: "256Mi"
+            cpu: "500m"
         env:
         - name: MONGODB_URL
-          value: mongodb://root:root@mongodb-0.mongodb-headless:27017/
+          value: #{mongodb-url}#
         - name: ORDERS_API_URL
-          value: http://ordersapi:5151
+          value: #{ordersapi-url}#
         ports:
         - containerPort: 5151
           protocol: TCP
+      - name: aws-otel-collector
+        image: amazon/aws-otel-collector:latest
+        env:
+          - name: AWS_REGION
+            value: "us-east-1"
+        imagePullPolicy: Always
+        resources:
+          limits:
+            cpu:  256m
+            memory: 512Mi
+          requests:
+            cpu: 32m
+            memory: 24Mi
       restartPolicy: Always
       # securityContext:
       #   runAsUser: 0
