added more Metrics

--- a/Deployment.yml
+++ b/Deployment.yml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: ordersapi
-        image: iamnilanjan3/ecom-orders-api:10
+        image: iamnilanjan3/ecom-orders-api:latest
         imagePullPolicy: IfNotPresent
         resources:
           limits:
